--- a/src/assets/styles/public.styl
+++ b/src/assets/styles/public.styl
@@ -3,3 +3,10 @@ hide()
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+
+clearFloat()
+	.clear:after
+		content: '';
+		display: block;
+		clear: both;
+		
